# pytest-test-categories

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  codecov.yml  coverage_target.txt  pyproject.toml  tox.ini
.github/: CODEOWNERS  CODEQL_SETUP.md  dependabot.yml  pull_request_template.md
.github/workflows/: auto-merge.yml  cd.yml  ci.yml  release.yml  secret-scanning.yml  security.yml  test-release.yml
docs/: DEPLOYMENT.md  MONITORING.md  compatibility.md  conf.py  configuration.md  deployment.md  getting-started.md  index.md
docs/api-reference/: error-messages.md  fixtures.md  markers.md
docs/architecture/: adr-001-network-isolation.md  adr-002-filesystem-isolation.md  adr-003-process-isolation.md  adr-004-database-isolation.md  adr-005-sleep-isolation.md  design-philosophy.md  index.md
docs/examples/: common-patterns.md  filesystem-isolation.md  index.md  migration-guide.md  network-isolation.md
docs/planning/: resource-isolation-feature.md
docs/troubleshooting/: filesystem-violations.md  index.md  network-violations.md
docs/user-guide/: database-isolation.md  distribution-validation.md  filesystem-isolation.md  index.md  mocking-and-small-tests.md  network-isolation.md  process-isolation.md  reporting.md  sleep-blocking.md  test-sizes.md
examples/enforcement_demo/: README.md  demo-record.sh  demo.cast  demo.sh  pyproject.toml
examples/enforcement_demo/src/demo_app/: __init__.py  api_client.py  cache.py  config.py  shell.py  worker.py
examples/enforcement_demo/tests/: __init__.py  conftest.py  test_problem_tests.py  test_solution_tests.py
src/pytest_test_categories/: __init__.py  __main__.py  errors.py  exceptions.py  json_report.py  plugin.py  reporting.py  state_storage.py  suggestion.py  timers.py  timing.py  types.py  violations.py
src/pytest_test_categories/adapters/: __init__.py  database.py  database_optional_libraries.py  fake_database.py  fake_filesystem.py  fake_network.py  filesystem.py  network.py  process.py  pytest_adapter.py  sleep.py
src/pytest_test_categories/coverage/: __init__.py  readers.py
src/pytest_test_categories/distribution/: __init__.py  stats.py
src/pytest_test_categories/ports/: __init__.py  database.py  filesystem.py  network.py  process.py  sleep.py
src/pytest_test_categories/services/: __init__.py  distribution_validation.py  suggestion_summary.py  test_discovery.py  timing_validation.py
tests/: conftest.py  it_check_coverage_integration.py  it_coveragepy_reader_integration.py  it_wall_timer_integration.py  test_base_classes_feature.py  test_categorization_feature.py  test_check_coverage_module.py  test_configurable_timing_validation_module.py  test_counting_service_module.py  test_coverage_reader_port_module.py  test_database_blocker_module.py  test_database_coverage_feature.py  test_distribution_analysis_feature.py  test_distribution_edge_cases_feature.py  test_distribution_enforcement_feature.py  test_distribution_enforcement_module.py  test_distribution_stats_module.py  test_distribution_validation_service_module.py  test_enum_properties_feature.py  test_error_messages_feature.py  test_fake_coverage_reader_module.py  test_fake_timer.py  test_file_system_port_module.py  test_filesystem_blocker_module.py  test_init_modules.py  test_json_report_feature.py  test_json_report_module.py  test_marker_inheritance_conflicts_module.py  test_network_blocker_module.py  test_output_writer_port_module.py  test_package_level_imports.py  test_performance_baseline_feature.py  test_performance_baseline_module.py  test_plugin_edge_cases_feature.py  test_plugin_module.py  test_process_blocker_module.py  test_report_edge_cases_feature.py  test_report_generation_feature.py  test_reporting_feature.py  test_reporting_module.py  (+17 more)
tests/_fixtures/: test_item.py  timer.py  warning_system.py
tests/_utils/: check_coverage.py  file_system.py
tests/bdd/: __init__.py  conftest.py
tests/bdd/features/enforcement/: configuration.feature  filesystem_enforcement.feature  network_enforcement.feature  sleep_enforcement.feature  subprocess_enforcement.feature  threading_enforcement.feature
tests/bdd/step_defs/: __init__.py  conftest.py  test_enforcement_steps.py
tests/benchmarks/: bench_collection.py  bench_execution.py
tests/integration/: it_configurable_time_limits.py  it_filesystem_blocker_integration.py  it_filesystem_blocking_hooks.py  it_network_blocker_integration.py  it_network_blocking_hooks.py  it_suggestion_mode.py  it_xdist_compatibility.py
