[project]
name = "pytest-test-categories"
version = "0.7.0"
description = "A pytest plugin to enforce test timing constraints and size distributions."
authors = [{ name = "Mike Lane", email = "mikelane@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "beartype>=0.22.5",
    "icontract>=2.7.1",
    "pydantic>=2.12.4",
    "pytest>=8.4.2",
]

[project.entry-points.pytest11]
test_categories = "pytest_test_categories.plugin"

[dependency-groups]
test = [
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
]
lint = [
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "pre-commit>=4.4.0",
    "ruff>=0.14.4",
]
dev = [
    "commitizen>=4.1.0",
    "tox>=4.32.0",
    "tox-uv>=1.29.0",
]
docs = [
    "furo>=2024.8.6",
    "myst-parser>=4.0.0",
    "sphinx>=8.0.0",
    "sphinx-autoapi>=3.4.0",
    "sphinx-copybutton>=0.5.2",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["it_*.py", "test_*.py"]
python_functions = ["it_*"]
python_classes = ["Describe[A-Z]*"]
addopts = ["-s", "-ra", "-q", "-vv"]
pythonpath = ["src", "tests/plugins"]
test_categories_enforcement = "strict"

filterwarnings = [
    "ignore:Unused async fixture loop scope:pytest.PytestWarning",
    "ignore:The `__fields__` attribute is deprecated:DeprecationWarning",
]


[tool.isort]
line_length = 120
profile = "black"
multi_line_output = 3
force_grid_wrap = 0
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff]
line-length = 120

src = ["src", "tests"]

include = ["*.py"]

exclude = [".git", ".venv", "__pycache__", "build", "dist"]

target-version = "py312"

respect-gitignore = true

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203", # Don't require 1 blank line before class docstring
    "D213", # Don't require multiline docstring to start at the second line
    "COM812", # Ignore missing trailing commas (conflicts with ruff format)
    "ISC001", # Ignore implicitly concatenated strings (conflicts with ruff format)
]

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"test_*.py" = [
    "D100", # Don't require module docstrings
    "D101", # Don't require class docstrings
    "D102", # Don't require method docstrings
    "D401", # Allow "It" pattern in test docstrings
    "PLR2004", # Don't prevent magic values in tests
    "PLC0415", # Allow imports in functions for test isolation
    "S101", # Don't prevent asserts
    "SLF001", # Allow private member access in tests (for verification)
]
"it_*.py" = [
    "D100", # Don't require module docstrings
    "D101", # Don't require class docstrings
    "D102", # Don't require method docstrings
    "PLR2004", # Don't prevent magic values in tests
    "S101", # Don't prevent asserts
]
"tests/*" = [
    "D100", # Don't require module docstrings in tests
    "D101", # Don't require class docstrings in tests
    "D102", # Don't require method docstrings in tests
    "D103", # Don't require function docstrings in tests
    "D104", # Don't require init docstrings in tests
    "D401", # Allow "It" pattern in test docstrings
    "PLC0415", # Allow imports in functions for test isolation (monkeypatching)
    "ARG002", # Allow unused kwargs in test fixtures
    "SLF001", # Allow private member access in tests (for verification)
]
"scripts/*" = ["T201"] # allow print function in the scripts
"src/pytest_test_categories/adapters/database.py" = [
    "C901", # Allow complexity in _restore_optional_libraries (many independent library restorations)
    "PLR0915", # Allow many statements in _restore_optional_libraries
]
"conftest.py" = ["D100"] # Don't require module docstrings in conftest
"__init__.py" = ["F401"] # allow unused imports in __init__.py

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.flake8-type-checking]
# Pydantic models need type annotations at runtime, not just for type checking
# Include both BaseModel and our Port classes that extend it
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "pytest_test_categories.ports.external_systems.ExternalSystemsDetectorPort",
    "pytest_test_categories.ports.database.DatabaseBlockerPort",
    "pytest_test_categories.ports.network.NetworkBlockerPort",
    "pytest_test_categories.ports.filesystem.FilesystemBlockerPort",
    "pytest_test_categories.ports.process.ProcessBlockerPort",
    "pytest_test_categories.ports.sleep.SleepBlockerPort",
    "pytest_test_categories.ports.threading.ThreadingBlockerPort",
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "double"
docstring-quotes = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "_pytest.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest_test_categories.adapters.database"
# This module patches database libraries that may not be installed
# and uses dynamic patching that mypy can't type-check
disable_error_code = ["import-untyped", "import-not-found", "assignment", "no-any-return", "unused-ignore"]

[[tool.mypy.overrides]]
module = ["psycopg2", "psycopg2.*", "psycopg", "psycopg.*", "pymysql", "pymysql.*", "pymongo", "pymongo.*", "redis", "redis.*", "sqlalchemy", "sqlalchemy.*"]
ignore_missing_imports = true


[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "v$version"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
major_version_zero = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
